    ADDED: right click menu for bookmarks
    ADDED: enable/disable special bookmarks by right clicking on them
    ADDED: keeping the directory structures for virt folders at copy/move
    ADDED: synchronizer, parallel threads for slow FTP servers
    ADDED: an option for directories to be always sorted by name
    ADDED: packing with encryption, multiple volume archives, compress level
    ADDED: krarc, 7z, 7za handling
    ADDED: media button
    ADDED: swap panels / swap sides
    ADDED: synchronizer, threshold for equality, time offset between sides
    ADDED: synchronizer, faster "compare by content" for local files
    ADDED: synchronizer, Feed to listbox
    ADDED: searcher, synchronizer: directory name filters (ex. '* | CVS/')
    ADDED: searcher is able to search content on remote URLs
    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    FIXED: cannot close Krusader when "menubar on top of the screen" is chosen
    FIXED: URL duplication is disabled in the virtual URL collection
    FIXED: cut/copy/paste also works for virtual URLs
    FIXED: [ 1483172 ] crash at refreshing the view during rename
    FIXED: [ 1144729 ] Krusader doesn't remember popup panel splitter position
    FIXED: [ 1479034 ] Crashes after clicking home button, when quicksearch is
           active (patch by Heiner Eichmann)
    FIXED: wrong character set is used on the radial map labels
    FIXED: TC style rename does not work with "Obey KDE's global selection policy"
    FIXED: [ 1189341 ] minimize to tray problems with GNOME
    FIXED: set duplicate exclusion and maximum count for all KHistoryCombos
    FIXED: [ 984936 ] Wrong file cursor position when entering protected directory