@@ -1,3 +1,5 @@
+    ADDED: single instance mode
+    ADDED: start to system tray
     ADDED: right click menu for bookmarks
     ADDED: enable/disable special bookmarks by right clicking on them
     ADDED: keeping the directory structures for virt folders at copy/move
